# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./proxies";
 export * from "./scheduler-config";
+export * from "./alert-config";
